[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "boltdown"
version         = "0.1.1"
description     = "Python torrent download manager wrapping aria2c via JSON-RPC"
readme          = "README.md"
license         = "MIT"
authors         = [{ name = "Mohammad Ameen Barech" }]
keywords        = ["torrent", "aria2", "bittorrent", "download", "magnet"]
requires-python = ">=3.9"

# Core runtime — stdlib only; no external HTTP library needed.
dependencies = []

[project.optional-dependencies]
# Required only for .torrent file support
torrent = ["bencodepy>=0.9.5"]

# Development / testing
dev = [
    "pytest>=7",
    "pytest-cov",
    "bencodepy>=0.9.5",
]

[project.urls]
Homepage   = "https://github.com/mohammadameenbarech/boltdown-lib"
Repository = "https://github.com/mohammadameenbarech/boltdown-lib"
Issues     = "https://github.com/mohammadameenbarech/boltdown-lib/issues"

[project.scripts]
# Optional CLI entry point (future)
# boltdown = "boltdown.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["boltdown*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["boltdown"]
